--- a/package.json
+++ b/package.json
@@ -14,10 +14,11 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hamburger-menu": "^1.2.1",
+    "react-helmet": "^6.1.0",
     "react-icons": "^4.9.0",
     "react-pdf": "^7.0.1",
     "react-router": "^6.11.2",
-    "react-router-dom": "^6.11.2",
+    "react-router-dom": "^6.12.1",
     "react-scripts": "5.0.1",
     "react-transition-group": "^4.4.5",
     "web-vitals": "^2.1.4"
@@ -29,7 +30,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "dev": "nodemon ./src/App.js"
+    "dev": "nodemon App.js"
   },
   "eslintConfig": {
     "extends": [
