--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "devicon": "^2.15.1",
+    "devicon-react-svg": "^0.2.4",
     "express": "^4.18.2",
     "gh-pages": "^5.0.0",
     "nodemon": "^2.0.22",
